# think-up-menu

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: implement.md  spec.md
.github/workflows/: test.yml
accounts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_auth.py
app/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
app/tests/: test_auth.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: exception_handlers.py  exceptions.py  logging.py
docs/: api-conventions.md  architecture.md  authentication.md  branching.md  ci.md  coding-style.md  directory.md  error-handling.md  logging.md  testing.md
docs/specs/: _template.md  user-auth.md
